--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@babel/preset-env": "^7.12.11",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "next",
     "file-loader": "^6.2.0",
     "sass": "^1.26.5",
     "sass-loader": "^7.3.1",
@@ -33,6 +33,7 @@
     "@babel/runtime": "^7.12.5",
     "@babel/runtime-corejs3": "^7.12.5",
     "@tweenjs/tween.js": "^18.6.4",
+    "compression-webpack-plugin": "^5.0.1",
     "css-loader": "^3.6.0",
     "less": "^4.1.2",
     "less-loader": "^5.0.0",
