--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   "author": "big-sun",
   "license": "ISC",
   "devDependencies": {
+    "@vue/cli-plugin-babel": "^4.5.0",
+    "@vue/cli-plugin-router": "^4.5.0",
+    "@vue/cli-plugin-vuex": "^4.5.0",
+    "@vue/cli-service": "^4.5.0",
+    "vue-template-compiler": "^2.6.11",
     "@babel/core": "^7.12.10",
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
@@ -44,6 +49,9 @@
     "less-loader": "^5.0.0",
     "style-loader": "^1.3.0",
     "three": "^0.126.1",
-    "three-orbitcontrols": "^2.110.3"
+    "three-orbitcontrols": "^2.110.3",
+    "vue": "^2.6.11",
+    "vue-router": "^3.2.0",
+    "vuex": "^3.4.0"
   }
 }
