--- a/package.json
+++ b/package.json
@@ -15,25 +15,26 @@
   "author": "big-sun",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "@vue/cli-plugin-babel": "^4.5.0",
     "@vue/cli-plugin-router": "^4.5.0",
     "@vue/cli-plugin-vuex": "^4.5.0",
     "@vue/cli-service": "^4.5.0",
-    "vue-template-compiler": "^2.6.11",
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "extract-text-webpack-plugin": "next",
     "file-loader": "^6.2.0",
     "sass": "^1.26.5",
     "sass-loader": "^7.3.1",
+    "svg-sprite-loader": "^6.0.11",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.1",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "svg-sprite-loader": "^6.0.11",
     "worker-loader": "^3.0.8",
     "worker-plugin": "^5.0.1"
   },
