--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vue/cli-plugin-vuex": "^4.5.0",
     "@vue/cli-service": "^4.5.0",
     "babel-loader": "^8.2.2",
+    "babel-plugin-component": "^1.1.1",
     "clean-webpack-plugin": "^3.0.0",
     "extract-text-webpack-plugin": "next",
     "file-loader": "^6.2.0",
@@ -40,6 +41,7 @@
   },
   "dependencies": {
     "axios": "^1.2.0",
+    "element-ui": "^2.15.1",
     "jszip": "^3.10.1",
     "@babel/runtime": "^7.12.5",
     "@babel/runtime-corejs3": "^7.12.5",
