--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "three-orbitcontrols": "^2.110.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "js-cookie": "^3.0.1",
+    "js-md5": "^0.7.3"
   }
 }
